Changelog
0.3.8
  Added nm_slider
  All objects will have a unique id (not present in release directory)	
  Added highlight to release

0.3.7
  Added NM_Highlight
  NM_TextBubble can be assigned to target an other element. That element becomes hoverable, showing and hiding the textbubble
  Added NM_qGroup and NM_qItem. Added inspector for quiz item editing
  Added Nemo workspace	
  
0.3.6
  Replaced classList.contains("nm_Animation") from nemo.jsx in assignAnimation. Since it apparantly is randomly unsupported. Made our own contains function.
  addAnimation now maked the animation and images folder if it doesn't already exists.

0.3.5
  Added NM_Box
  New and improved components icons.
  SlideIndex now displayed the total number of slides as well insead of: "?"
  Fixed bug when adding and assigning an animation that had a space in the name. Old aniamtions will have to be re-imported and reassigned.
  Added inspector for NM_TextBubble object with pointer control
  Changed font to PT Sans Narrow, font size and line height

0.3.4
  Delete button in the slideContainer instead of a context-menu
  Added NM_Text
  Changed the css a bit. (no more rounded cornors in textfield, and ragged_right)
  Improved the preloader (to not bug with Edge)

0.3.3
  Added the Animation tab to the exension.
    User can add, update and delete animations.
  Renamed the "Nemo" tab to "Slides"
  Assigning animations now actually works. Dynamically loading them when viewing in the browser as well!
  
0.3.2
  Added Stay-Ghosting
  Added go to Comment Slide button to extension

0.3.1
  Going from comment slide backwards to the last slide now works again :)
  
0.3.0
  Release CSExtension version.

0.2.4
  "check for improted aniamtions" now works
  Automatic start typing after inserting object
  Close button added for nm_Exclamation object
  Added nm.begrip to stylesheets
  Improved preloader
  Added commentGreen

0.2.3
  Added the images used in Nemo.htm floater