@@ -1,10 +1,10 @@
 <!-- MENU-LOCATION=NONE -->
-<html xmlns:MMString="http://www.macromedia.com/schemes/data/string/">
+<html>
 <head>
 <!-- Copyright 2000, 2001, 2002, 2003 Macromedia, Inc. All rights reserved. -->
-<title>NM_qGroup</title>
+<title>NM_ExperimentPane</title>
 
-<script src="NM_qGroup.js"></script>
+<script src="NM_ExperimentPane.js"></script>
 </head>
 <body>
 </body>
