@@ -1,11 +1,0 @@
-<!-- MENU-LOCATION=NONE -->
-<html xmlns:MMString="http://www.macromedia.com/schemes/data/string/">
-<head>
-<!-- Copyright 2000, 2001, 2002, 2003 Macromedia, Inc. All rights reserved. -->
-<title>NM_qItem</title>
-
-<script src="NM_qItem.js"></script>
-</head>
-<body>
-</body>
-</html>
